[tool.poetry]
name = "youtube-dl-api-server"
version = "0.1.0"
description = ""
authors = ["long2ice <long2ice@prismslight.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.47.1", extras = ["=all"]}
uvicorn = "^0.11.2"
youtube_dl = "^2020.1.15"
pysocks = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
