[tool.poetry]
name = "youtube-dl-api-server"
version = "0.1.0"
description = ""
authors = ["long2ice <long2ice@prismslight.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "*", extras = ["=all"]}
uvicorn = "*"
youtube_dl = "*"
pysocks = "*"
python-multipart = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
